--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 API_SECRET=98hbun98h #Used when creating a JWT. It can be anything
 DB_HOST=localhost
 DB_DRIVER=postgres
-DB_USER=admin
-DB_PASSWORD=admin
-DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=123456
+DB_NAME=capstone
 DB_PORT=5432
 
 ENV="development"
