--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ API_SECRET=98hbun98h #Used when creating a JWT. It can be anything
 DB_HOST=localhost
 DB_DRIVER=postgres
 DB_USER=postgres
-DB_PASSWORD=123456
-DB_NAME=capstone
+DB_PASSWORD=postgres
+DB_NAME=mytestdb
 DB_PORT=5432
 
 ENV="development"
